added the toolbar & headline sections with there styles & assetes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <title>My Portfolio Microverse</title>
   </head>
   <body>
-    <h2>hello</h2>
+    <header class="header">
+      <a href="#">Yusuf Obr</a>
+      <div class="hamburger">
+        <span class="hamburger-top"></span>
+        <span class="hamburger-middle"></span>
+        <span class="hamburger-bottom"></span>
+      </div>
+    </header>
+    <section class="hero">
+      <h2 class="padding">I’m Youssef Glad to see you!</h2>
+      <p class="padding">
+        I’m a software developer! I can help you build a product , feature or
+        website Look through some of my work and experience! If you like what
+        you see and have a project you need coded, don’t hestiate to contact me.
+      </p>
+      <a class="padding" href="#">LET’S CONNECT</a>
+      <div class="social">
+        <img src="/assets/127.svg" alt="" />
+        <img class="sc-item" src="/assets/125.svg" alt="" />
+        <img class="sc-item" src="/assets/124.svg" alt="" />
+        <img class="sc-item" src="/assets/126.svg" alt="" />
+        <img class="sc-item" src="/assets/123.svg" alt="" />
+      </div>
+    </section>
   </body>
 </html>
