fixing the background image for the headline section & the nav bar

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <header class="header">
       <a href="#">Yusuf Obr</a>
-      <div class="hamburger">
+      <nav class="hamburger">
         <span class="hamburger-top"></span>
         <span class="hamburger-middle"></span>
         <span class="hamburger-bottom"></span>
-      </div>
+      </nav>
     </header>
     <section class="hero">
       <h2 class="padding">I’m Youssef Glad to see you!</h2>
