added Work & About sections with their styles and assets

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My Portfolio Microverse</title>
   </head>
   <body>
+    <!-- Header Section -->
     <header class="header">
       <a href="#">Yusuf Obr</a>
       <nav class="hamburger">
@@ -16,6 +17,7 @@
         <span class="hamburger-bottom"></span>
       </nav>
     </header>
+    <!-- Headline Section -->
     <section class="hero">
       <h2 class="padding">I’m Youssef Glad to see you!</h2>
       <p class="padding">
@@ -25,12 +27,185 @@
       </p>
       <a class="padding" href="#">LET’S CONNECT</a>
       <div class="social">
-        <img src="/assets/127.svg" alt="" />
-        <img class="sc-item" src="/assets/125.svg" alt="" />
-        <img class="sc-item" src="/assets/124.svg" alt="" />
-        <img class="sc-item" src="/assets/126.svg" alt="" />
-        <img class="sc-item" src="/assets/123.svg" alt="" />
+        <img src="./assets/127.svg" alt="" />
+        <img class="sc-item" src="./assets/125.svg" alt="" />
+        <img class="sc-item" src="./assets/124.svg" alt="" />
+        <img class="sc-item" src="./assets/126.svg" alt="" />
+        <img class="sc-item" src="./assets/123.svg" alt="" />
       </div>
+    </section>
+    <!-- Works Section -->
+    <section class="works">
+      <div class="cards">
+        <!-- First Card -->
+        <div class="card">
+          <img class="card-img" src="./assets/Snapshoot1.png" alt="" />
+          <div class="card-details">
+            <div class="card-item-mg">
+              <span class="card-title">Tonic</span>
+              <div class="card-info">
+                <span class="info-active">CANOPY</span>
+                <img src="./assets/Counter.svg" alt="" />
+                <span>Back End Dev</span>
+                <img src="./assets/Counter.svg" alt="" />
+                <span>2015</span>
+              </div>
+            </div>
+            <p class="card-descrip card-item-mg">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+            <div class="card-tags card-item-mg">
+              <span class="card-tag">html</span>
+              <span class="card-tag">css</span>
+              <span class="card-tag">javascript</span>
+            </div>
+            <div class="card-action">
+              <button class="card-btn">See Project</button>
+            </div>
+          </div>
+        </div>
+        <!-- Second Card -->
+        <div class="card">
+          <img class="card-img" src="./assets/Snapshoot2.png" alt="" />
+          <div class="card-details">
+            <div class="card-item-mg">
+              <span class="card-title">Multi-Post Stories</span>
+              <div class="card-info">
+                <span class="info-active">CANOPY</span>
+                <img src="./assets/Counter.svg" alt="" />
+                <span>Back End Dev</span>
+                <img src="./assets/Counter.svg" alt="" />
+                <span>2015</span>
+              </div>
+            </div>
+            <p class="card-descrip card-item-mg">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+            <div class="card-tags card-item-mg">
+              <span class="card-tag">html</span>
+              <span class="card-tag">css</span>
+              <span class="card-tag">javascript</span>
+            </div>
+            <div class="card-action">
+              <button class="card-btn">See Project</button>
+            </div>
+          </div>
+        </div>
+        <!-- Third Card -->
+        <div class="card">
+          <img class="card-img" src="./assets/Snapshoot3.png" alt="" />
+          <div class="card-details">
+            <div class="card-item-mg">
+              <span class="card-title">Tonic</span>
+              <div class="card-info">
+                <span class="info-active">CANOPY</span>
+                <img src="./assets/Counter.svg" alt="" />
+                <span>Back End Dev</span>
+                <img src="./assets/Counter.svg" alt="" />
+                <span>2015</span>
+              </div>
+            </div>
+            <p class="card-descrip card-item-mg">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+            <div class="card-tags card-item-mg">
+              <span class="card-tag">html</span>
+              <span class="card-tag">css</span>
+              <span class="card-tag">javascript</span>
+            </div>
+            <div class="card-action">
+              <button class="card-btn">See Project</button>
+            </div>
+          </div>
+        </div>
+        <!-- Fourth Card -->
+        <div class="card">
+          <img class="card-img" src="./assets/Snapshoot4.png" alt="" />
+          <div class="card-details">
+            <div class="card-item-mg">
+              <span class="card-title">Multi-Post Stories</span>
+              <div class="card-info">
+                <span class="info-active">CANOPY</span>
+                <img src="./assets/Counter.svg" alt="" />
+                <span>Back End Dev</span>
+                <img src="./assets/Counter.svg" alt="" />
+                <span>2015</span>
+              </div>
+            </div>
+            <p class="card-descrip card-item-mg">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+            <div class="card-tags card-item-mg">
+              <span class="card-tag">html</span>
+              <span class="card-tag">css</span>
+              <span class="card-tag">javascript</span>
+            </div>
+            <div class="card-action">
+              <button class="card-btn">See Project</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- About Me Section -->
+    <section class="about-me">
+      <h2 class="padding">
+        About <br />
+        Myself
+      </h2>
+      <p class="padding">
+        Hello I’m a software developer! I can help you build a product , feature
+        or website Look through some of my work and experience! If you like what
+        you see and have a project you need coded, don’t hestiate to contact me.
+      </p>
+      <a class="padding" href="#">LET’S CONNECT</a>
+      <div class="social">
+        <img src="./assets/126.svg" alt="github" />
+        <img class="sc-item" src="./assets/125.svg" alt="linkedin" />
+        <img class="sc-item" src="./assets/123.svg" alt="hand" />
+        <img class="sc-item" src="./assets/127.svg" alt="twitter" />
+        <img class="sc-item" src="./assets/124.svg" alt="M" />
+      </div>
+      <div class="card-action marggin">
+        <button class="card-btn">Get my resume</button>
+      </div>
+    </section>
+    <!-- Q&A Section -->
+    <section class="q-a">
+      <details class="qa" open>
+        <summary>
+          <span>Languages</span>
+          <img src="./assets/arrow-bottom.svg" alt="" width="12" />
+        </summary>
+        <div class="qa-item">
+          <img src="./assets/js.png" alt="" />
+          <span>javascript</span>
+        </div>
+        <div class="qa-item">
+          <img src="./assets/html.png" alt="" />
+          <span>HTML</span>
+        </div>
+        <div class="qa-item">
+          <img src="./assets/css.png" alt="" />
+          <span>CSS</span>
+        </div>
+      </details>
+      <details class="qa closed">
+        <summary>
+          <span>Frameworks</span>
+          <img src="./assets/arrow-bottom.svg" alt="" width="12" />
+        </summary>
+      </details>
+      <details class="qa closed">
+        <summary>
+          <span>Skills</span>
+          <img src="./assets/arrow-bottom.svg" alt="" width="12" />
+        </summary>
+      </details>
     </section>
   </body>
 </html>
