fixing the Html Semantic and adding links to social media icons

--- a/index.html
+++ b/index.html
@@ -26,13 +26,33 @@
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
       <a class="padding" href="#">LET’S CONNECT</a>
-      <div class="social">
-        <img src="./assets/127.svg" alt="" />
-        <img class="sc-item" src="./assets/125.svg" alt="" />
-        <img class="sc-item" src="./assets/124.svg" alt="" />
-        <img class="sc-item" src="./assets/126.svg" alt="" />
-        <img class="sc-item" src="./assets/123.svg" alt="" />
-      </div>
+      <ul class="social">
+        <li>
+          <a href="https://github.com/yusufobr">
+            <img src="./assets/126.svg" alt="github" />
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/youssef-oubari-370451147">
+            <img class="sc-item" src="./assets/125.svg" alt="linkedin" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="sc-item" src="./assets/123.svg" alt="hand" />
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/OubariY">
+            <img class="sc-item" src="./assets/127.svg" alt="twitter" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="sc-item" src="./assets/124.svg" alt="M" />
+          </a>
+        </li>
+      </ul>
     </section>
     <!-- Works Section -->
     <section class="works">
@@ -42,7 +62,7 @@
           <img class="card-img" src="./assets/Snapshoot1.png" alt="" />
           <div class="card-details">
             <div class="card-item-mg">
-              <span class="card-title">Tonic</span>
+              <h3 class="card-title">Tonic</h3>
               <div class="card-info">
                 <span class="info-active">CANOPY</span>
                 <img src="./assets/Counter.svg" alt="" />
@@ -55,11 +75,11 @@
               A daily selection of privately personalized reads; no accounts or
               sign-ups required.
             </p>
-            <div class="card-tags card-item-mg">
-              <span class="card-tag">html</span>
-              <span class="card-tag">css</span>
-              <span class="card-tag">javascript</span>
-            </div>
+            <ul class="card-tags card-item-mg">
+              <li class="card-tag">html</li>
+              <li class="card-tag">css</li>
+              <li class="card-tag">javascript</li>
+            </ul>
             <div class="card-action">
               <button class="card-btn">See Project</button>
             </div>
@@ -70,7 +90,7 @@
           <img class="card-img" src="./assets/Snapshoot2.png" alt="" />
           <div class="card-details">
             <div class="card-item-mg">
-              <span class="card-title">Multi-Post Stories</span>
+              <h3 class="card-title">Multi-Post Stories</h3>
               <div class="card-info">
                 <span class="info-active">CANOPY</span>
                 <img src="./assets/Counter.svg" alt="" />
@@ -83,11 +103,11 @@
               A daily selection of privately personalized reads; no accounts or
               sign-ups required.
             </p>
-            <div class="card-tags card-item-mg">
-              <span class="card-tag">html</span>
-              <span class="card-tag">css</span>
-              <span class="card-tag">javascript</span>
-            </div>
+            <ul class="card-tags card-item-mg">
+              <li class="card-tag">html</li>
+              <li class="card-tag">css</li>
+              <li class="card-tag">javascript</li>
+            </ul>
             <div class="card-action">
               <button class="card-btn">See Project</button>
             </div>
@@ -98,7 +118,7 @@
           <img class="card-img" src="./assets/Snapshoot3.png" alt="" />
           <div class="card-details">
             <div class="card-item-mg">
-              <span class="card-title">Tonic</span>
+              <h3 class="card-title">Tonic</h3>
               <div class="card-info">
                 <span class="info-active">CANOPY</span>
                 <img src="./assets/Counter.svg" alt="" />
@@ -111,11 +131,11 @@
               A daily selection of privately personalized reads; no accounts or
               sign-ups required.
             </p>
-            <div class="card-tags card-item-mg">
-              <span class="card-tag">html</span>
-              <span class="card-tag">css</span>
-              <span class="card-tag">javascript</span>
-            </div>
+            <ul class="card-tags card-item-mg">
+              <li class="card-tag">html</li>
+              <li class="card-tag">css</li>
+              <li class="card-tag">javascript</li>
+            </ul>
             <div class="card-action">
               <button class="card-btn">See Project</button>
             </div>
@@ -126,7 +146,7 @@
           <img class="card-img" src="./assets/Snapshoot4.png" alt="" />
           <div class="card-details">
             <div class="card-item-mg">
-              <span class="card-title">Multi-Post Stories</span>
+              <h3 class="card-title">Multi-Post Stories</h3>
               <div class="card-info">
                 <span class="info-active">CANOPY</span>
                 <img src="./assets/Counter.svg" alt="" />
@@ -139,11 +159,11 @@
               A daily selection of privately personalized reads; no accounts or
               sign-ups required.
             </p>
-            <div class="card-tags card-item-mg">
-              <span class="card-tag">html</span>
-              <span class="card-tag">css</span>
-              <span class="card-tag">javascript</span>
-            </div>
+            <ul class="card-tags card-item-mg">
+              <li class="card-tag">html</li>
+              <li class="card-tag">css</li>
+              <li class="card-tag">javascript</li>
+            </ul>
             <div class="card-action">
               <button class="card-btn">See Project</button>
             </div>
@@ -163,13 +183,33 @@
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
       <a class="padding" href="#">LET’S CONNECT</a>
-      <div class="social">
-        <img src="./assets/126.svg" alt="github" />
-        <img class="sc-item" src="./assets/125.svg" alt="linkedin" />
-        <img class="sc-item" src="./assets/123.svg" alt="hand" />
-        <img class="sc-item" src="./assets/127.svg" alt="twitter" />
-        <img class="sc-item" src="./assets/124.svg" alt="M" />
-      </div>
+      <ul class="social">
+        <li>
+          <a href="https://github.com/yusufobr">
+            <img src="./assets/126.svg" alt="github" />
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/youssef-oubari-370451147">
+            <img class="sc-item" src="./assets/125.svg" alt="linkedin" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="sc-item" src="./assets/123.svg" alt="hand" />
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/OubariY">
+            <img class="sc-item" src="./assets/127.svg" alt="twitter" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="sc-item" src="./assets/124.svg" alt="M" />
+          </a>
+        </li>
+      </ul>
       <div class="card-action marggin">
         <button class="card-btn">Get my resume</button>
       </div>
@@ -181,18 +221,20 @@
           <span>Languages</span>
           <img src="./assets/arrow-bottom.svg" alt="" width="12" />
         </summary>
-        <div class="qa-item">
-          <img src="./assets/js.png" alt="" />
-          <span>javascript</span>
-        </div>
-        <div class="qa-item">
-          <img src="./assets/html.png" alt="" />
-          <span>HTML</span>
-        </div>
-        <div class="qa-item">
-          <img src="./assets/css.png" alt="" />
-          <span>CSS</span>
-        </div>
+        <ul>
+          <li class="qa-item">
+            <img src="./assets/js.png" alt="" />
+            <span>javascript</span>
+          </li>
+          <li class="qa-item">
+            <img src="./assets/html.png" alt="" />
+            <span>HTML</span>
+          </li>
+          <li class="qa-item">
+            <img src="./assets/css.png" alt="" />
+            <span>CSS</span>
+          </li>
+        </ul>
       </details>
       <details class="qa closed">
         <summary>
