added the float position for the html tag

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               sign-ups required.
             </p>
             <ul class="card-tags card-item-mg">
-              <li class="card-tag">html</li>
+              <li class="card-tag card-tag-html">html</li>
               <li class="card-tag">css</li>
               <li class="card-tag">javascript</li>
             </ul>
