--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </p>
             <ul class="card-tags card-item-mg">
               <li class="card-tag card-tag-html">html</li>
-              <li class="card-tag">css</li>
+              <li class="card-tag card-tag-css">css</li>
               <li class="card-tag">javascript</li>
             </ul>
             <div class="card-action">
