fixed the float position for js tag

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <ul class="card-tags card-item-mg">
               <li class="card-tag card-tag-html">html</li>
               <li class="card-tag card-tag-css">css</li>
-              <li class="card-tag">javascript</li>
+              <li class="card-tag card-tag-js">javascript</li>
             </ul>
             <div class="card-action">
               <button class="card-btn">See Project</button>
