--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <span class="hamburger-bottom"></span>
       </nav>
     </header>
+
     <!-- Headline Section -->
     <section class="hero">
       <h2 class="padding">I’m Youssef Glad to see you!</h2>
@@ -54,6 +55,7 @@
         </li>
       </ul>
     </section>
+
     <!-- Works Section -->
     <section class="works">
       <div class="cards">
@@ -171,6 +173,7 @@
         </div>
       </div>
     </section>
+
     <!-- About Me Section -->
     <section class="about-me">
       <h2 class="padding">
@@ -214,6 +217,7 @@
         <button class="card-btn">Get my resume</button>
       </div>
     </section>
+
     <!-- Q&A Section -->
     <section class="q-a">
       <details class="qa" open>
@@ -248,6 +252,39 @@
           <img src="./assets/arrow-bottom.svg" alt="" width="12" />
         </summary>
       </details>
+    </section>
+
+    <!-- Contact Form -->
+    <section class="contact">
+      <div class="contact-container">
+        <div class="contact-descrition">
+          <h3>Contact me</h3>
+          <p>
+            If you have an application you are interested in developing, a
+            feature that you need built or a project that needs coding. I'd love
+            to help with it
+          </p>
+        </div>
+        <form action="https://formspree.io/f/xnqydzvy" method="POST">
+          <input type="text" placeholder="Yeremias" maxlength="30" required />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="natajayanj14@gmail.com"
+            required
+          />
+          <textarea
+            name="message"
+            cols="30"
+            rows="10"
+            placeholder="Write your message here"
+            maxlength="500"
+            required
+          ></textarea>
+          <button class="card-btn" type="submit">Get in touch</button>
+        </form>
+      </div>
     </section>
   </body>
 </html>
