--- a/index.html
+++ b/index.html
@@ -274,7 +274,15 @@
             placeholder="natajayanj14@gmail.com"
             required
           />
-  
+          <textarea
+            name="message"
+            cols="30"
+            rows="10"
+            placeholder="Write your message here"
+            maxlength="500"
+            required
+          ></textarea>
+          <button class="card-btn" type="submit">Get in touch</button>
         </form>
       </div>
     </section>
