nest the nav links and  added hover style to a tags of navbar

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <!-- Header -->
     <header class="header">
       <nav class="nav-desktop">
-        <a href="#">Yusuf Obr</a>
+        <a class="logo" href="#">Yusuf Obr</a>
         <ul class="nav-sections">
-          <li>Portoflio</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a class="nav-item" href="#hero">Portoflio</a></li>
+          <li><a class="nav-item" href="#about">About</a></li>
+          <li><a class="nav-item" href="#contact">Contact</a></li>
         </ul>
         <!-- Hamburger Menu -->
         <button class="hamburger-btn">
@@ -25,7 +25,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section id="hero" class="hero fit-with-screen">
       <div class="hero-container">
         <h2 class="title">
           I'm Youssef <br />
@@ -192,7 +192,7 @@
     </section>
 
     <!-- About Me & Q&A Section -->
-    <section class="about-me">
+    <section id="about" class="about-me fit-with-screen">
       <div class="about-me-container">
         <div class="hero-container mx-w">
           <h2 class="about-title">
@@ -279,7 +279,7 @@
     </section>
 
     <!-- Contact Form -->
-    <section class="contact">
+    <section id="contact" class="contact fit-with-screen">
       <div class="contact-container">
         <div class="contact-descrition">
           <h3>Contact me</h3>
