added animation to cards

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section class="works">
       <div class="works-container">
         <!-- 1st Card -->
-        <div class="card slid-r">
+        <div class="card">
           <img class="card-img" src="./assets/Snapshoot-1.png" alt="" />
           <div class="card-details">
             <div class="card-item-mg">
@@ -100,7 +100,7 @@
           </div>
         </div>
         <!-- 2nd Card -->
-        <div class="card reverse slid-l">
+        <div class="card reverse">
           <div class="card-details">
             <div class="card-item-mg">
               <h3 class="card-title">Multi-Post Stories</h3>
@@ -130,7 +130,7 @@
           <img class="card-img" src="./assets/Snapshoot-2.png" alt="" />
         </div>
         <!-- 3rd Card -->
-        <div class="card slid-r">
+        <div class="card">
           <img class="card-img" src="./assets/Snapshoot-3.png" alt="" />
           <div class="card-details">
             <div class="card-item-mg">
@@ -160,7 +160,7 @@
           </div>
         </div>
         <!-- 4th Card -->
-        <div class="card reverse slid-l">
+        <div class="card reverse">
           <div class="card-details">
             <div class="card-item-mg">
               <h3 class="card-title">Uber Navigation</h3>
