added alt to img tags, fixed the color contrast, and fixed the text heading

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
         <!-- Hamburger Menu -->
         <button class="hamburger-btn">
-          <img src="./assets/hamburger-icon.svg" alt="" />
+          <img src="./assets/hamburger-icon.svg" alt="nav-icon" />
         </button>
       </nav>
     </header>
@@ -27,10 +27,10 @@
     <!-- Hero Section -->
     <section id="hero" class="hero fit-with-screen">
       <div class="hero-container slid-l">
-        <h2 class="title">
+        <h1 class="title">
           I'm Youssef <br />
           Glad to see you!
-        </h2>
+        </h1>
         <p class="bio">
           I'm a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
@@ -61,7 +61,7 @@
           </li>
           <li>
             <a href="#">
-              <img class="sc-item" src="./assets/m.svg" alt="M" />
+              <img class="sc-item" src="./assets/m.svg" alt="Meduim" />
             </a>
           </li>
         </ul>
@@ -73,15 +73,15 @@
       <div class="works-container">
         <!-- 1st Card -->
         <div class="card">
-          <img class="card-img" src="./assets/Snapshoot-1.png" alt="" />
+          <img class="card-img" src="./assets/Snapshoot-1.png" alt="work-1" />
           <div class="card-details">
             <div class="card-item-mg">
               <h3 class="card-title">Tonic</h3>
               <div class="card-info">
                 <span class="info-active">CANOPY</span>
-                <img src="./assets/Counter.svg" alt="" />
+                <img src="./assets/Counter.svg" alt="dot" />
                 <span>Back End Dev</span>
-                <img src="./assets/Counter.svg" alt="" />
+                <img src="./assets/Counter.svg" alt="dot" />
                 <span>2015</span>
               </div>
             </div>
@@ -106,9 +106,9 @@
               <h3 class="card-title">Multi-Post Stories</h3>
               <div class="card-info">
                 <span class="info-active">FACEBOOK</span>
-                <img src="./assets/Counter.svg" alt="" />
+                <img src="./assets/Counter.svg" alt="dot" />
                 <span>Full Stack Dev</span>
-                <img src="./assets/Counter.svg" alt="" />
+                <img src="./assets/Counter.svg" alt="dot" />
                 <span>2015</span>
               </div>
             </div>
@@ -127,19 +127,19 @@
               <button class="card-btn">See Project</button>
             </div>
           </div>
-          <img class="card-img" src="./assets/Snapshoot-2.png" alt="" />
+          <img class="card-img" src="./assets/Snapshoot-2.png" alt="work-2" />
         </div>
         <!-- 3rd Card -->
         <div class="card">
-          <img class="card-img" src="./assets/Snapshoot-3.png" alt="" />
+          <img class="card-img" src="./assets/Snapshoot-3.png" alt="work-3" />
           <div class="card-details">
             <div class="card-item-mg">
               <h3 class="card-title">Facebook 360</h3>
               <div class="card-info">
                 <span class="info-active">FACEBOOK</span>
-                <img src="./assets/Counter.svg" alt="" />
+                <img src="./assets/Counter.svg" alt="dot" />
                 <span>Full Stack Dev</span>
-                <img src="./assets/Counter.svg" alt="" />
+                <img src="./assets/Counter.svg" alt="dot" />
                 <span>2015</span>
               </div>
             </div>
@@ -166,9 +166,9 @@
               <h3 class="card-title">Uber Navigation</h3>
               <div class="card-info">
                 <span class="info-active">Uber</span>
-                <img src="./assets/Counter.svg" alt="" />
+                <img src="./assets/Counter.svg" alt="dot" />
                 <span>Lead Developer</span>
-                <img src="./assets/Counter.svg" alt="" />
+                <img src="./assets/Counter.svg" alt="dot" />
                 <span>2015</span>
               </div>
             </div>
@@ -186,7 +186,7 @@
               <button class="card-btn">See Project</button>
             </div>
           </div>
-          <img class="card-img" src="./assets/Snapshoot-4.png" alt="" />
+          <img class="card-img" src="./assets/Snapshoot-4.png" alt="work-4" />
         </div>
       </div>
     </section>
@@ -233,7 +233,7 @@
             </li>
             <li>
               <a href="#">
-                <img class="sc-item" src="./assets/m.svg" alt="M" />
+                <img class="sc-item" src="./assets/m.svg" alt="Meduim" />
               </a>
             </li>
           </ul>
@@ -245,19 +245,23 @@
           <details class="qa" open>
             <summary>
               <span>Languages</span>
-              <img src="./assets/arrow-bottom.svg" alt="" width="12" />
+              <img
+                src="./assets/arrow-bottom.svg"
+                alt="arrow-bottom"
+                width="12"
+              />
             </summary>
             <ul class="skills">
               <li class="qa-item">
-                <img src="./assets/js.png" alt="" />
+                <img src="./assets/js.png" alt="javascript" />
                 <span>javascript</span>
               </li>
               <li class="qa-item">
-                <img src="./assets/html.png" alt="" />
+                <img src="./assets/html.png" alt="html" />
                 <span>HTML</span>
               </li>
               <li class="qa-item">
-                <img src="./assets/css.png" alt="" />
+                <img src="./assets/css.png" alt="css" />
                 <span>CSS</span>
               </li>
             </ul>
@@ -265,13 +269,21 @@
           <details class="qa closed">
             <summary>
               <span>Frameworks</span>
-              <img src="./assets/arrow-bottom.svg" alt="" width="12" />
+              <img
+                src="./assets/arrow-bottom.svg"
+                alt="arrow-bottom"
+                width="12"
+              />
             </summary>
           </details>
           <details class="qa closed">
             <summary>
               <span>Skills</span>
-              <img src="./assets/arrow-bottom.svg" alt="" width="12" />
+              <img
+                src="./assets/arrow-bottom.svg"
+                alt="arrow-bottom"
+                width="12"
+              />
             </summary>
           </details>
         </div>
@@ -290,7 +302,14 @@
           </p>
         </div>
         <form action="https://formspree.io/f/xnqydzvy" method="POST">
-          <input type="text" placeholder="Yeremias" maxlength="30" required />
+          <input
+            type="text"
+            name="name"
+            id="name"
+            placeholder="Yeremias"
+            maxlength="30"
+            required
+          />
           <input
             type="email"
             name="email"
@@ -300,6 +319,7 @@
           />
           <textarea
             name="message"
+            id="message"
             cols="30"
             rows="10"
             placeholder="Write your message here"
