fixed Image Test Alternatives

--- a/index.html
+++ b/index.html
@@ -41,27 +41,27 @@
         <ul class="social">
           <li>
             <a href="https://github.com/yusufobr">
-              <img src="./assets/github.svg" alt="github" />
+              <img src="./assets/github.svg" alt="github profile" />
             </a>
           </li>
           <li>
             <a href="https://www.linkedin.com/in/youssef-oubari-370451147">
-              <img class="sc-item" src="./assets/linkedin.svg" alt="linkedin" />
+              <img class="sc-item" src="./assets/linkedin.svg" alt="linkedin profile" />
             </a>
           </li>
           <li>
             <a href="#">
-              <img class="sc-item" src="./assets/hand.svg" alt="hand" />
+              <img class="sc-item" src="./assets/hand.svg" alt="hand profile" />
             </a>
           </li>
           <li>
             <a href="https://twitter.com/OubariY">
-              <img class="sc-item" src="./assets/twitter.svg" alt="twitter" />
+              <img class="sc-item" src="./assets/twitter.svg" alt="twitter profile" />
             </a>
           </li>
           <li>
             <a href="#">
-              <img class="sc-item" src="./assets/m.svg" alt="Meduim" />
+              <img class="sc-item" src="./assets/m.svg" alt="meduim profile" />
             </a>
           </li>
         </ul>
@@ -209,7 +209,7 @@
           <ul class="social">
             <li>
               <a href="https://github.com/yusufobr">
-                <img src="./assets/github.svg" alt="github" />
+                <img src="./assets/github.svg" alt="github profile" />
               </a>
             </li>
             <li>
@@ -223,17 +223,17 @@
             </li>
             <li>
               <a href="#">
-                <img class="sc-item" src="./assets/hand.svg" alt="hand" />
+                <img class="sc-item" src="./assets/hand.svg" alt="hand profile" />
               </a>
             </li>
             <li>
               <a href="https://twitter.com/OubariY">
-                <img class="sc-item" src="./assets/twitter.svg" alt="twitter" />
+                <img class="sc-item" src="./assets/twitter.svg" alt="twitter profile" />
               </a>
             </li>
             <li>
               <a href="#">
-                <img class="sc-item" src="./assets/m.svg" alt="Meduim" />
+                <img class="sc-item" src="./assets/m.svg" alt="meduim profile" />
               </a>
             </li>
           </ul>
