add Html & Css for mobile menu

--- a/index.html
+++ b/index.html
@@ -18,9 +18,19 @@
           <li><a class="nav-item" href="#contact">Contact</a></li>
         </ul>
         <!-- Hamburger Menu -->
-        <button class="hamburger-btn">
+        <button id="hamburger-icon" class="hamburger-btn">
           <img src="./assets/hamburger-icon.svg" alt="nav-icon" />
         </button>
+        <div id="mobile-nav" class="hidden hello">
+          <div class="nav-mobile">
+            <button id="close-btn"><span>X</span></button>
+            <ul>
+              <li><a class="a-mobile" href="#hero">Portoflio</a></li>
+              <li><a class="a-mobile" href="#about">About</a></li>
+              <li><a class="a-mobile" href="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
 
@@ -46,7 +56,11 @@
           </li>
           <li>
             <a href="https://www.linkedin.com/in/youssef-oubari-370451147">
-              <img class="sc-item" src="./assets/linkedin.svg" alt="linkedin profile" />
+              <img
+                class="sc-item"
+                src="./assets/linkedin.svg"
+                alt="linkedin profile"
+              />
             </a>
           </li>
           <li>
@@ -56,7 +70,11 @@
           </li>
           <li>
             <a href="https://twitter.com/OubariY">
-              <img class="sc-item" src="./assets/twitter.svg" alt="twitter profile" />
+              <img
+                class="sc-item"
+                src="./assets/twitter.svg"
+                alt="twitter profile"
+              />
             </a>
           </li>
           <li>
@@ -223,17 +241,29 @@
             </li>
             <li>
               <a href="#">
-                <img class="sc-item" src="./assets/hand.svg" alt="hand profile" />
+                <img
+                  class="sc-item"
+                  src="./assets/hand.svg"
+                  alt="hand profile"
+                />
               </a>
             </li>
             <li>
               <a href="https://twitter.com/OubariY">
-                <img class="sc-item" src="./assets/twitter.svg" alt="twitter profile" />
+                <img
+                  class="sc-item"
+                  src="./assets/twitter.svg"
+                  alt="twitter profile"
+                />
               </a>
             </li>
             <li>
               <a href="#">
-                <img class="sc-item" src="./assets/m.svg" alt="meduim profile" />
+                <img
+                  class="sc-item"
+                  src="./assets/m.svg"
+                  alt="meduim profile"
+                />
               </a>
             </li>
           </ul>
@@ -330,5 +360,6 @@
         </form>
       </div>
     </section>
+    <script src="./index.js"></script>
   </body>
 </html>
